# parcae

./: .gitignore  README.md  pyproject.toml
parcae/: __init__.py  api.py  cli.py
training/: build_timeseries.py  config.py  inspect_timeseries.py  train_hmm.py
