[project]
name = "parcae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[project.optional-dependencies]
train = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
]

[project.scripts]
parcae = "parcae.cli:main"

[tool.setuptools]
packages = ["parcae"]
include-package-data = true

[tool.setuptools.data-files]
models = ["models/hmm.npz"]
